--- a/[ikressource]/adminMenu/index.html
+++ b/[ikressource]/adminMenu/index.html
@@ -6,7 +6,7 @@
 </header>
 
 <body>
-    <div class="OurDiv">
+    <div class="OurDiv shadow">
         <h1 class="title">IkAdmin</h1>
         <div class="main">
             <button class="button" onclick="noclip()">Noclip</button>
